Final branch (#252)
* codeowners

* codeowners

* Rezolvat probleme sonarQube + teste pt dev1

* Modificat uri endpoint-uri ai

* Fix AI API versioning (#228)

* add central entitlement and quota checks (#225)

* Ioanar subscription quota on user (#227)

* add central entitlement and quota checks

* enforce subscription quotas on user creation and imports

* added pagination and filtering for classroom listings (#230)

* modificare entrypoints

* Stripe integration (#235)

* stripe payment integration

* stripe payment integration

* Sonar Qube fixes (#233)

* added endpoint to list my classrooms (#236)

* Some more fixes (#237)

* enforce subscription quota on classroom creation (#238)

* Documentation changes and null profing access service (#239)

* Documentation changes null profing (#240)

* Documentation changes and null profing access service

* Failure when not AI registration

* add bulk user import from csv (#241)

* SonarQube fixes and added a global class for exception codes

* feat: add missing Swagger documentation to controller endpoints

Agent-Logs-Url: https://github.com/Grupa-A2-Inc/backend/sessions/8e1152dc-4d94-46e3-aae5-4eca3f828203

Co-authored-by: punctIT <89927154+punctIT@users.noreply.github.com>

* last sonarqube fix

* ce am pus pe deploy

* Am adaugat ErrorReportRoutingService

* Some more sonar qube fixes (#247)

* Some more fixes

* Minor fixes

* removal of some useless imports (#248)

* Am adaugat teste pentru sprint-uri vechi si am rezolvat issues cu sonar qube

* Am rezolvat issues aparute in sonar qube

* Adaugat preAuthorize la endpoint-urile de LessonRating

* Adaugat endpoint-ul /api/v1/ai/catalog/curriculum

* Modificat un test

---------

Co-authored-by: Ghiorghies Andrei-Cristian <andrey5015n@gmail.com>
Co-authored-by: Patranea Cosmin-Cristian <cosminpatranea@gmail.com>
Co-authored-by: rendiucioana <irendiuc@gmail.com>
Co-authored-by: ioanaa-c <ioanacaprariu06@gmail.com>
Co-authored-by: sara <125995801+sara-giulia@users.norep